--- a/templates/base.html
+++ b/templates/base.html
@@ -25,16 +25,22 @@
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<script src="https://www.paypal.com/sdk/js?client-id=AXWUPIXg43C-sBuzbzllw1w9jc6OZcBKAXwvS21s17ZgmecJa69VDupKavRUGsxUlymCKHt71EhYQwT1&currency=USD"></script>
 <script type="text/javascript">
 /// some script
 
 // jquery ready start
 $(document).ready(function() {
 	// jQuery code
-
+    setTimeout(function() {
+        $('message').fadeOut('slow')
+    }, 4000)
 }); 
 // jquery end
 </script>
